
  From Mathew Robinson:
    - Fix issue #3415 - Update remaining usages of EnvironmentError to SConsEnvironmentError
      this patch fixes issues introduced in 3.1.0 where any of the
      following would cause SCons to error and exit:
        - CacheDir not write-able
        - JSON encoding errors for CacheDir config
        - JSON decoding errors for CacheDir config


RELEASE 3.1.0 - Mon, 20 Jul 2019 16:59:23 -0700

  From Joseph Brill:
    - Code to supply correct version-specifier argument to vswhere for
      VS version selection.

  From William Deegan:
    - Enhanced --debug=explain output. Now the separate components of the dependency list are split up
      as follows:

      scons: rebuilding `file3' because:
           the dependency order changed:
           ->Sources
           Old:xxx	New:zzz
           Old:yyy	New:yyy
           Old:zzz	New:xxx
           ->Depends
           ->Implicit
           Old:/usr/bin/python	New:/usr/bin/python
    - Fix Issue #3350 - SCons Exception EnvironmentError is conflicting with Python's EnvironmentError.
    - Fix spurious rebuilds on second build for cases where builder has > 1 target and the source file
      is generated. This was causing the > 1th target to not have it's implicit list cleared when the source
      file was actually built, leaving an implicit list similar to follows for 2nd and higher target
              ['/usr/bin/python', 'xxx', 'yyy', 'zzz']
      This was getting persisted to SConsign and on rebuild it would be corrected to be similar to this
              ['zzz', 'yyy', 'xxx', '/usr/bin/python']
      Which would trigger a rebuild because the order changed.
      The fix involved added logic to mark all shared targets as peers and then ensure they're implicit
      list is all cleared together.
    - Fix Issue #3349 - SCons Exception EnvironmentError is conflicting with Python's EnvironmentError.
      Renamed to SConsEnvironmentError